Updates to responsiveness, another calendar height fix

--- a/css/main.css
+++ b/css/main.css
@@ -224,12 +224,94 @@ q:before, q:after {
   float: left;
   display: inline-block; }
 
-@media (max-width: 1000px) {
+@media (max-width: 1px) {
   .side-panel-container {
     display: none !important; }
 
   .main-data-container {
     width: 100%; } }
+@media (max-width: 600px) {
+  .courses-table-entry td:first-child {
+    display: none; }
+
+  .courses-table-entry td:last-child {
+    border-right: none !important; }
+
+  .cal-enroll {
+    display: none; }
+
+  table, thead, tbody, th, td, tr {
+    display: block; }
+
+  /* Hide table headers (but not display: none;, for accessibility) */
+  thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px; }
+
+  tr {
+    border: 3px solid #4279FF !important; }
+
+  .courses-table-waitlisted {
+    border-top: none !important;
+    border-bottom: none !important;
+    border-radius: 0rem !important; }
+
+  .courses-table-waitlisted td {
+    display: none; }
+
+  .courses-table-waitlisted td:nth-child(2) {
+    display: block; }
+
+  .courses-table-waitlisted-text {
+    visibility: hidden; }
+
+  .courses-table-waitlisted td:nth-child(2):before {
+    content: "Waitlisted Courses" !important; }
+
+  td {
+    /* Behave  like a "row" */
+    border: none;
+    border-bottom: 1px solid #eee;
+    position: relative;
+    padding-left: 50%; }
+
+  td:before {
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap; }
+
+  td:nth-of-type(1):before {
+    content: "Drop"; }
+
+  td:nth-of-type(2):before {
+    content: "Class"; }
+
+  td:nth-of-type(3):before {
+    content: "Type"; }
+
+  td:nth-of-type(4):before {
+    content: "Time"; }
+
+  td:nth-of-type(5):before {
+    content: "Room"; }
+
+  td:nth-of-type(6):before {
+    content: "Instructor"; }
+
+  td:nth-of-type(7):before {
+    content: "Units"; }
+
+  td:nth-of-type(8):before {
+    content: "CCN"; }
+
+  td:nth-of-type(9):before {
+    content: "Waitlist"; } }
 .side-panel-container {
   margin-left: 1%;
   width: 27%;
@@ -258,26 +340,6 @@ input, select {
   padding-bottom: 0.3rem;
   padding-left: 0.15rem; }
 
-select {
-  outline: 0;
-  -webkit-appearance: none;
-  -webkit-border-radius: 0px;
-  background-color: white !important;
-  border-radius: 0;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-appearance: none;
-  -moz-appearance: none; }
-
-/* Select Arrow styling CSS from http://stackoverflow.com/questions/22153080/how-do-i-change-the-select-box-arrow */
-select:not(:disabled) {
-  background: linear-gradient(45deg, transparent 50%, #4279FF 50%), linear-gradient(135deg, #4279FF 50%, transparent 50%);
-  background-position: calc(100% - 12px) calc(0.4rem + 2px), calc(100% - 8px) calc(0.4rem + 2px);
-  background-size: 4px 4px, 4px 4px;
-  background-repeat: no-repeat; }
-
 input {
   outline: 0; }
 
@@ -302,7 +364,8 @@ a {
   color: black; }
 
 .outline-blue {
-  border: 1px solid #4279FF !important; }
+  border: 2px solid #4279FF !important;
+  border-radius: 0.25rem; }
 
 .color-blue {
   color: #4279FF; }
@@ -319,11 +382,63 @@ a {
 .rm-margin-bottom {
   margin-bottom: 0px !important; }
 
+input:disabled {
+  border: 2px solid #E8E8E8 !important;
+  border-radius: 0.25rem !important;
+  background-color: #E8E8E8 !important; }
+
+input:disabled::-webkit-input-placeholder {
+  color: #B2B2B2 !important; }
+
+input:disabled:-moz-placeholder {
+  /* Firefox 18- */
+  color: #B2B2B2 !important; }
+
+input:disabled::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #B2B2B2 !important; }
+
+input:disabled:-ms-input-placeholder {
+  color: #B2B2B2 !important; }
+
+select {
+  outline: 0;
+  -webkit-appearance: none;
+  -webkit-border-radius: 0px;
+  background-color: white !important;
+  border-radius: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none; }
+
+select:disabled {
+  border: 2px solid #E8E8E8 !important;
+  border-radius: 0.25rem !important;
+  color: #B2B2B2 !important;
+  background-color: #E8E8E8 !important; }
+
+/* Select Arrow styling CSS from http://stackoverflow.com/questions/22153080/how-do-i-change-the-select-box-arrow */
+select:not(:disabled) {
+  background: linear-gradient(45deg, transparent 50%, #4279FF 50%), linear-gradient(135deg, #4279FF 50%, transparent 50%);
+  background-position: calc(100% - 12px) calc(0.4rem + 2px), calc(100% - 8px) calc(0.4rem + 2px);
+  background-size: 4px 4px, 4px 4px;
+  background-repeat: no-repeat; }
+
 .Select {
   height: 100% !important; }
 
 .Select.is-disabled {
-  border: 1px solid #a6a6a6 !important; }
+  border: 2px solid #E8E8E8 !important;
+  border-radius: 0.25rem !important; }
+  .Select.is-disabled .Select-control {
+    background-color: #E8E8E8 !important; }
+  .Select.is-disabled .Select-placeholder {
+    color: #B2B2B2 !important; }
+  .Select.is-disabled .Select-arrow {
+    border-color: #B2B2B2 transparent transparent !important; }
 
 .Select-control {
   border-radius: 0rem !important;
@@ -531,6 +646,15 @@ span.Select-arrow-zone {
   text-align: left;
   background-color: #4279FF;
   color: white; }
+
+.courses-table-header-row th:nth-child(2) {
+  width: 25%; }
+
+.courses-table-header-row th:nth-child(3) {
+  width: 12%; }
+
+.courses-table-header-row th:nth-child(5) {
+  width: 12%; }
 
 .courses-table-waitlisted {
   background-color: #EEEEEE;
@@ -788,32 +912,49 @@ span.Select-arrow-zone {
   padding-bottom: 0.5rem; }
 
 .add-class-CCN {
-  width: 25%;
-  float: left; }
-
-.add-class-section {
-  width: 71%;
-  float: right;
-  display: inline-block !important; }
-
-.add-class-form-row {
-  height: 1.5rem;
-  margin-bottom: 0.35rem; }
+  float: left;
+  width: 15%;
+  padding-top: 0.2rem;
+  padding-bottom: 0.25rem;
+  display: inline-block; }
 
 .add-class-department {
-  width: 49% !important;
-  float: left; }
+  width: 44% !important;
+  margin-left: 2%;
+  display: inline-block; }
 
 .add-class-course-number {
   float: right;
-  width: 49% !important; }
+  width: 35% !important;
+  display: inline-block; }
+
+.add-class-lecture-section {
+  width: 100%;
+  float: left; }
+
+.add-class-lab-section {
+  width: 100%;
+  float: left; }
+
+.add-class-discussion-section {
+  width: 100%;
+  float: left; }
+
+.add-class-grade-option {
+  width: 48%;
+  float: left; }
+
+.add-class-CEC {
+  width: 48%;
+  float: right; }
+
+.add-class-form-row {
+  height: 1.5rem;
+  width: 100%;
+  margin-bottom: 0.2rem; }
 
 .add-class-class-name {
   width: 60% !important; }
-
-.add-class-lab, .add-class-discussion {
-  margin-bottom: 0.05rem;
-  width: 99%; }
 
 .add-class-waitlist-status {
   display: inline-block;
@@ -823,7 +964,8 @@ span.Select-arrow-zone {
 
 .add-class-waitlist-row {
   width: 100%;
-  text-align: right; }
+  text-align: right;
+  margin-top: 1rem; }
 
 .add-class-waitlist {
   font-size: 0.9rem; }
