Point 'drop' link to official drop URL

--- a/css/main.scss
+++ b/css/main.scss
@@ -635,6 +635,10 @@ span.Select-arrow-zone {
   text-align: center;
 }
 
+.courses-table-entry .class-drop a {
+  text-decoration: none;
+}
+
 .courses-table-entry td {
   border-bottom: 1px solid $primary-gray;
 }
