--- a/css/modules/_variables.scss
+++ b/css/modules/_variables.scss
@@ -7,3 +7,5 @@ $disabled-text: #B2B2B2;
 $font-stack: 'Calibre-Regular', sans-serif;
 $font-semibold: 'Calibre-Semibold', sans-serif;
 $font-bold: 'Calibre-Bold', sans-serif;
+$medium-break: 1050px;
+$small-break: 750px;
