--- a/css/components/_enrolledcourses.scss
+++ b/css/components/_enrolledcourses.scss
@@ -1,32 +1,28 @@
 .courses-table-enroll th {
   font-weight: normal;
-  min-width: 1rem;
 }
 
 .courses-table-enroll {
   width: 100%;
-  border-radius: 5rem;
   border-spacing: 0rem;
   margin-bottom: 2rem;
 }
 
 .courses-table-header-row th {
-  padding-top: 0.5rem;
-  padding-bottom: 0.25rem;
-  font-size: 0.8rem;
-  text-align: left;
   background-color: $primary-blue;
   color: white;
+  padding-top: 0.5rem;
+  padding-bottom: 0.25rem;
+  font-size: 0.9rem;
+  text-align: left;
 }
 
 .courses-table-header-row th:nth-child(2) {
   width: 25%;
 }
-
 .courses-table-header-row th:nth-child(3) {
   width: 12%;
 }
-
 .courses-table-header-row th:nth-child(5) {
   width: 12%;
 }
@@ -64,9 +60,7 @@
 }
 
 .courses-table-entry td {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  padding-right: 0.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 0rem;
   line-height: 1.75rem;
 }
 
@@ -84,12 +78,10 @@
 
 .courses-table-entry td:first-child {
   border-left: 1px solid $primary-gray;
-  width: 50px;
 }
 
 .courses-table-entry td:last-child {
   border-right: 1px solid $primary-gray;
-  width: 50px;
 }
 
 .courses-table-entry td:nth-child(2) {
@@ -98,8 +90,5 @@
 }
 
 .discussion-swap {
-  padding-right: 0.5rem;
-  padding-left: 0.5rem;
-  padding-top: 0.4rem;
-  padding-bottom: 0.5rem;
+  padding-right: 0.4rem 0.5rem 0.5rem 0.5rem;
 }
