--- a/css/layouts/_table.scss
+++ b/css/layouts/_table.scss
@@ -60,7 +60,7 @@
 		border: none;
 		border-bottom: 1px solid #eee;
 		position: relative;
-		padding-left: 50%;
+		padding-left: 50% !important;
 	}
 
 	td:before {
