--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,7 @@ $root-url: rootURL();
 @import 'components/calendar';
 @import 'components/coursepicker';
 @import 'components/enrolledcourses';
-@import 'components/phase2signup';
+@import 'components/googlecalendar';
 @import 'components/shoppingcart';
 @import 'components/unitsummary';
 @import 'components/footer';
