--- a/css/components/_googlecalendar.scss
+++ b/css/components/_googlecalendar.scss
@@ -1,27 +1,27 @@
-.phase2-signup-panel {
+.google-signup-panel {
   background-color: $primary-gray;
   padding: 1rem;
   margin-bottom: 1rem;
   border-radius: 0.25rem;
 }
 
-.phase2-text {
+.google-text {
   margin-top: 0rem;
   margin-bottom: 0.2rem;
   font-size: 2rem;
   line-height: 1.9rem;
 }
 
-.phase2-header-text {
+.google-header-text {
   font-weight: bold;
   font-size: 1.3rem;
 }
 
-.phase2-date, .phase2-time {
+.google-date, .google-time {
   color: $primary-blue;
 }
 
-.phase2-add-calendar-alert {
+.google-add-calendar-alert {
   padding: 0.8rem 1.8rem;
   font-size: 0.8rem;
 }
