Fix padding on the input fields in course picker

--- a/css/components/_coursepicker.scss
+++ b/css/components/_coursepicker.scss
@@ -111,6 +111,8 @@
 .add-class-CEC {
   width: 48%;
   float: right;
+  padding-bottom: 0rem;
+  padding-top: 0.25rem;
 }
 
 .add-class-form-row {
@@ -121,6 +123,8 @@
 
 .add-class-class-name {
   width: 60% !important;
+  padding-bottom: 0rem;
+  padding-top: 0.25rem;
 }
 
 .add-class-waitlist-status {
