--- a/css/components/_shoppingcart.scss
+++ b/css/components/_shoppingcart.scss
@@ -3,6 +3,10 @@
   padding: 1rem;
   margin-bottom: 1rem;
   border-radius: 0.25rem;
+
+  & button {
+    padding-bottom: 0.15rem !important;
+  }
 }
 
 .sc-header-text {
