--- a/css/components/_googlecalendar.scss
+++ b/css/components/_googlecalendar.scss
@@ -1,27 +1,27 @@
-.google-signup-panel {
-  background-color: $primary-gray;
-  padding: 1rem;
-  margin-bottom: 1rem;
-  border-radius: 0.25rem;
+.google-cal-panel {
+  margin: 0rem 0rem 1rem 0rem;
+
+  button {
+    height: 50px;
+    font-size: 0.8rem;
+    padding-top: 0.5rem;
+    box-shadow: 0px 2px 0px #4086E7;
+    width: 100%;
+    font-size: 1rem;
+  }
 }
 
-.google-text {
-  margin-top: 0rem;
-  margin-bottom: 0.2rem;
-  font-size: 2rem;
-  line-height: 1.9rem;
-}
+.google-cal-info {
+  width: 400px !important;
+  left: calc(50% + 225px) !important;
+  
+  a {
+    color: $primary-blue;
+    text-decoration: none;
+  }
 
-.google-header-text {
-  font-weight: bold;
-  font-size: 1.3rem;
-}
-
-.google-date, .google-time {
-  color: $primary-blue;
-}
-
-.google-add-calendar-alert {
-  padding: 0.8rem 1.8rem;
-  font-size: 0.8rem;
+  p {
+    margin-bottom: 1rem !important;
+    margin-right: 1rem;
+  }
 }
